--- a/main.tex
+++ b/main.tex
@@ -3,6 +3,8 @@
     \def\svgwidth{\columnwidth}
     \import{./Figures/}{#1.pdf_tex}
 }
+\providecommand{\tightlist}{%
+  \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
 \include{preamble}
 
 \title{Conformal bootstrap and integrability}
